[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets_cutsene_2/2cutscene1.png" type="Texture" id=1]
[ext_resource path="res://assets_cutsene_2/2cutscene2.png" type="Texture" id=2]
[ext_resource path="res://assets_cutsene_2/2cutscene7.png" type="Texture" id=3]
[ext_resource path="res://assets_cutsene_2/2cutscene9.png" type="Texture" id=4]
[ext_resource path="res://assets/pixil-layer-Background (39) (1).png" type="Texture" id=5]
[ext_resource path="res://assets_cutsene_2/2cutscene4.png" type="Texture" id=6]
[ext_resource path="res://assets/pixil-layer-Background (38).png" type="Texture" id=7]
[ext_resource path="res://assets_cutsene_2/2cutscene8.png" type="Texture" id=8]
[ext_resource path="res://assets_cutsene_2/2cutscene5.png" type="Texture" id=9]
[ext_resource path="res://assets_cutsene_2/2cutscene6.png" type="Texture" id=10]
[ext_resource path="res://assets_cutsene_2/2cutscene3.png" type="Texture" id=11]
[ext_resource path="res://src/cutscene_cobrinho.gd" type="Script" id=12]
[ext_resource path="res://assets/pixil-layer-Background (36).png" type="Texture" id=13]
[ext_resource path="res://assets/pixil-layer-Background (37).png" type="Texture" id=14]
[ext_resource path="res://Musicas/c152-Escape-from-Everyone-♫-Synthwave-NO-COPYRIGHT-Background-_AudioTrimmer.com_-_1_.wav" type="AudioStream" id=15]
[ext_resource path="res://fontes/DeterminationMonoWebRegular-Z5oq.ttf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=1]
extra_spacing_space = -1
font_data = ExtResource( 16 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 12 )

[node name="_2cutscene1" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 510 )
texture = ExtResource( 1 )

[node name="_2cutscene2" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 510 )
texture = ExtResource( 2 )

[node name="_2cutscene3" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 510 )
texture = ExtResource( 11 )

[node name="_2cutscene4" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 510 )
texture = ExtResource( 6 )

[node name="_2cutscene5" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 510 )
texture = ExtResource( 9 )

[node name="_2cutscene6" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 510 )
texture = ExtResource( 10 )

[node name="_2cutscene7" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 510 )
texture = ExtResource( 3 )

[node name="_2cutscene8" type="Sprite" parent="."]
position = Vector2( 510, 510 )
texture = ExtResource( 8 )

[node name="_2cutscene9" type="Sprite" parent="."]
position = Vector2( 510, 510 )
texture = ExtResource( 4 )

[node name="_2back" type="TouchScreenButton" parent="."]
position = Vector2( 15, 532 )
normal = ExtResource( 7 )
pressed = ExtResource( 5 )

[node name="_2continue" type="TouchScreenButton" parent="."]
position = Vector2( 930, 532 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )

[node name="audio_cutscene2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="Label" type="Label" parent="."]
margin_left = 668.0
margin_top = 66.0
margin_right = 808.0
margin_bottom = 197.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Se você não quer acabar igual a elas, acho melhor você ir embora para sempre da V.tal!!"
align = 1
autowrap = true

[connection signal="released" from="_2back" to="." method="_on__2back_released"]
[connection signal="released" from="_2continue" to="." method="_on__2continue_released"]
